# CISCO-to-JUNOS

./: .env.example  LICENSE  README.md  pyproject.toml  requirements.txt
cisco_to_junos/: __init__.py  auth.py  cli.py  converter.py  converter_extensions.py  interactive_config.py  merger.py  parser.py  parser_extensions.py
examples/: cisco_BPe.txt  example_cisco_switch.txt
